chatbot implemented in the Server folder

--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -3,8 +3,8 @@
   
 <head>
   <title>Chatbot</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <script async src="../Server/server.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename= '/style.css') }}">
+  <script async src="{{ url_for('static', filename= '/client.js') }}"></script>
 </head>
 
 <body>
